// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the snapshot (large) 1`] = `
.c0 {
  border: 2px solid rgba(0,0,0,0.1);
  border-left-color: #b2b2b2;
  -webkit-animation: loader-spin 1s infinite linear;
  animation: loader-spin 1s infinite linear;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  border-radius: 50%;
}

.c0 {
  width: 80px;
  height: 80px;
}

<div
  class="c0"
  data-testid="spinner"
/>
`;

exports[`matches the snapshot (medium) 1`] = `
.c0 {
  border: 2px solid rgba(0,0,0,0.1);
  border-left-color: #b2b2b2;
  -webkit-animation: loader-spin 1s infinite linear;
  animation: loader-spin 1s infinite linear;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  border-radius: 50%;
}

.c0 {
  width: 50px;
  height: 50px;
}

<div
  class="c0"
  data-testid="spinner"
/>
`;

exports[`matches the snapshot (small) 1`] = `
.c0 {
  border: 2px solid rgba(0,0,0,0.1);
  border-left-color: #b2b2b2;
  -webkit-animation: loader-spin 1s infinite linear;
  animation: loader-spin 1s infinite linear;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  border-radius: 50%;
}

.c0 {
  width: 15px;
  height: 15px;
}

<div
  class="c0"
  data-testid="spinner"
/>
`;
